tests/baselines/reference/decoratorOnFunctionExpression.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnFunctionExpression.ts(3,9): error TS1206: Decorators are not valid here.


==== tests/cases/conformance/decorators/invalid/decoratorOnFunctionExpression.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    var F = @dec function () {
            ~
!!! error TS1206: Decorators are not valid here.
    }
    